<resources>
    <string name="action_settings">Settings</string>
    <string name="userNumber">用户名</string>
    <string name="userNumberHint">请输入账号或手机号码</string>
    <string name="userPassword">登录密码</string>
    <string name="userPasswordHint">请输入密码</string>
    <string name="userCode">商铺编号</string>
    <string name="userCodeHint">请输入商铺编号</string>
    <string name="loginButton">登录</string>
    <string name="register">注册</string>
    <string name="forgotPassword">忘记密码</string>
    <string name="forgotPassword_Q">忘记密码?</string>
    <string name="tv_getSecurityTitle">获取验证码</string>
    <string name="registerTitle">注册</string>
    <string name="tv_registerTitle">欢迎注册</string>
    <string name="registerToLoginView">登录</string>
    <string name="pleaseSelectRegisterCustomerType">请选择您要注册的身份</string>
    <string name="registerDealer">经销商</string>
    <string name="registerAgent">代理商</string>
    <string name="phoneNumberHint">请输入手机号码</string>
    <string name="securityCodeHint">请输入短信验证码</string>
    <string name="getSecurityCode">点击获取</string>
    <string name="newStep">下一步</string>
    <string name="pleaseSelectRegisterLocation">请选择注册地：</string>
    <string name="registerLocationSelect">省市区选择</string>
    <string name="registerLocationHint">请选择所在地区</string>
    <string name="et_registerUserNameHint">请输入姓名</string>
    <string name="et_registerCompanyNameHint">请输入公司名称</string>
    <string name="et_registerPasswordHint">请输入密码</string>
    <string name="et_registerPasswordConfirmHint">请确认密码</string>
    <string name="registerBtn">注 册</string>
    <string name="tv_userLoginPasswordChangeTitle">修改密码</string>
    <string name="et_userLoginPasswordChangeNewPasswordHint">请设置新密码</string>
    <string name="et_userLoginPasswordChangeConfirmNewPasswordHint">请确认新密码</string>
    <string name="btn_userLoginPasswordChangeQueryChangePassword">确认修改</string>
    <string name="rb_home">首页</string>
    <string name="rb_class">分类</string>
    <string name="rb_message">会话</string>
    <string name="rb_shopcart">购物车</string>
    <string name="rb_person">个人中心</string>
    <string name="FragmentHome_search">搜索</string>
    <string name="searchPrompt">搜索商品/品牌</string>
    <string name="newProducts">新品推荐</string>
    <string name="specialsProduct">特价商品</string>
    <string name="tip_specialsProduct">特价商品</string>
    <string name="goodStoreRecommend">好店推荐</string>
    <string name="hotSaleProduct">热卖产品</string>
    <string name="recommendedProduct">推荐产品</string>
    <string name="niceHotPush">精品热推</string>
    <string name="buyCrazy">疯狂秒杀</string>
    <string name="nextForecast">下期预告</string>
    <string name="goodsByGroupBuy">精品团购</string>
    <string name="centerOfGroupBuy">团购中心</string>
    <string name="begin">开始</string>
    <string name="salesByTimeLimited">限时抢购</string>
    <string name="jpRecomment">精品推荐</string>
    <string name="moreSalesByTimeLimited">更多抢购</string>
    <string name="morejpRecomment">更多精品</string>
    <string name="themeType">主题街</string>
    <string name="niceShopPush">好店推荐</string>
    <string name="tv_homeFragmentCrazyBuying">正在秒杀中···</string>
    <string name="clickMesKill">点击秒杀</string>
    <string name="justToBegin">即将开始</string>
    <string name="haveFinish">已经结束</string>
    <string name="justToJoinGroup">立即参团</string>
    <string name="joinGroupSuccess">成功成团</string>
    <string name="joinGroupFailed">成团失败</string>
    <string name="justToRob">立即抢购</string>
    <string name="haveFinishRob">已经抢光</string>
    <string name="title_sportSaleByTimeLimitedActivity">限时抢购</string>
    <string name="title_sportSaleBuyCrazyActivity">疯狂秒杀</string>
    <string name="tv_sportSaleByTimeNoBegin">抢购未开始</string>
    <string name="tv_sportSaleByTimeOnGoing">抢购进行中</string>
    <string name="tv_sportSaleByTimeHaveFinish">抢购已结束</string>
    <string name="tv_sportSaleByTimeSaleCompleted">商品已抢光</string>
    <string name="tv_sportModelBuyCrazyTypeChina">疯狂秒杀</string>
    <string name="tv_sportModelBuyCrazyTypeEnglish">TIME LIMIT</string>
    <string name="tv_sportModelBuyOnGoing">活动进行中...</string>
    <string name="tv_sportModelBuyTimeLimitedTypeChina">限时抢购</string>
    <string name="tv_sportModelBuyTimeLimitedTypeEnglish">LIMIT SALE</string>
    <string name="tv_sportSaleBuyCrazyPagerHaveFinish">已结束</string>
    <string name="tv_sportSaleBuyCrazyPagerSaleCompleted">已抢光</string>
    <string name="tv_sportSaleBuyCrazyPagerBuyNow">正在秒杀</string>
    <string name="tv_sportSaleBuyCrazyPagerNotBegin">未开始</string>
    <string name="goodsName">商品名称</string>
    <string name="goodsPrices">商品价格</string>
    <string name="goodsPackageType">套餐</string>
    <string name="goodsSpecType">套餐配置</string>
    <string name="goodsNumber">购买数量</string>
    <string name="goodsStockNum">库存:0</string>
    <string name="selectPackageType">选择套餐类型</string>
    <string name="goodDesc">商品介绍</string>
    <string name="goodsSpec">商品参数</string>
    <string name="goodsPackage">包装售后</string>
    <string name="specifications">规格参数 </string>
    <string name="packagingSale">包装售后 </string>
    <string name="agentThisGoods">代理此商品</string>
    <string name="chat">聊天 </string>
    <string name="addShoppingCart">加入购物车 </string>
    <string name="buyNow">立即购买 </string>
    <string name="tvIfAgentGoods">是否确认代理此商品 </string>
    <string name="tvIfAgentTheseGoods">是否确认代理这些商品 </string>
    <string name="personalCenter">个人中心</string>
    <string name="allOrders">全部订单</string>
    <string name="viewAllOrders">查看所有订单</string>
    <string name="myCollection">我的收藏</string>
    <string name="myChat">我的会话</string>
    <string name="myListings">我的代理</string>
    <string name="myAccount">我的账户</string>
    <string name="myBankCard">我的银行卡</string>
    <string name="myConversationList">我的会话</string>
    <string name="myShare">我要分享</string>
    <string name="settingCenterTitle">设置中心</string>
    <string name="logoutAccount">注销账号</string>
    <string name="completePersonalInfoTitle">完善个人信息</string>
    <string name="myHeaderImage">我的头像</string>
    <string name="myRealName">真实姓名</string>
    <string name="myShopName">店铺名称</string>
    <string name="addressManageActivity_edit">编辑</string>
    <string name="addressManageActivity_delete">删除</string>
    <string name="receiverName">收件人</string>
    <string name="receiverNameHint">请输入收件人姓名</string>
    <string name="userPhone">手机号码</string>
    <string name="userPhoneHint">请输入手机号码</string>
    <string name="postCode">邮政编号</string>
    <string name="postCodeHint">请输入邮政编号</string>
    <string name="receiverAddress">收货地址</string>
    <string name="receiverAddressHint">请填写详细地址，不少于5个字</string>
    <string name="selectPosition">请选择省、市、区</string>
    <string name="confirm">确认</string>
    <string name="myProfile">我的资料</string>
    <string name="userName">会员名</string>
    <string name="myDeliveryAddress">我的收货地址</string>
    <string name="myShop">我的店铺</string>
    <string name="myPoints">我的积分</string>
    <string name="myCollect">我的收藏 </string>
    <string name="searchHint">请输入关键字进行搜索</string>
    <string name="classify">分类</string>
    <string name="yuan">元</string>
    <string name="firstDistribution">一级分销</string>
    <string name="secondDistribution">二级分销</string>
    <string name="thirdDistribution">三级分销</string>
    <string name="selectAll">选择全部</string>
    <string name="addAllPrice">批量加价</string>
    <string name="cancelAgent">取消代理</string>
    <string name="SearchGoodsMyAgent_title">我的代理商品</string>
    <string name="SearchGoodsMyAgent_tv_sorting">筛选</string>
    <string name="SearchGoodsMyAgent_tv_class">分类</string>
    <string name="SearchGoodsMyAgent_search">搜索</string>
    <string name="wxShopManageTitle">特价商品设置</string>
    <string name="setToSpecialPricesGoods">设为特价</string>
    <string name="specialPricesGoods">特价商品</string>
    <string name="cancelSettingSpecialPrices">取消设置</string>
    <string name="addToSpecialPricesGoods">添加为特价商品</string>
    <string name="selectAllSimply">全选</string>
    <string name="WXShopManage_search">搜索</string>
    <string name="wxShopAddGoodsTitle">微信店铺管理</string>
    <string name="specialPricesGoodsSetting">特价商品设置</string>
    <string name="selectWXShopGoodsOfHome">选择微信店铺首页展示的商品分类</string>
    <string name="selectWXShopGoodsClass">选择商品分类</string>
    <string name="confirmSubmitWXShopGoods">确认提交</string>
    <string name="SearchGoods_title">综合排序</string>
    <string name="SearchGoods_comprehensiveSorting">综合排序</string>
    <string name="SearchGoods_prioritySales">销量优先</string>
    <string name="SearchGoods_priceSort">价格排序</string>
    <string name="SearchGoods_price">价格</string>
    <string name="SearchGoods_search">搜索</string>
    <string name="SearchGoods_tvSorting">筛选</string>
    <string name="SearchGoods_tvNoStoneCount">暂无货</string>
    <string name="title_GoodsFilter">筛选</string>
    <string name="GoodsFilter_tvFilter">筛选</string>
    <string name="GoodsFilter_tvAllBrands">全部</string>
    <string name="GoodsFilter_btnOK">确定</string>
    <string name="GoodsFilter_btnReset">重置</string>
    <string name="determine">确定</string>
    <string name="btn_goodsDetailGeneralActivityQueryAgent">确认代理</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">数据加载中...</string>
    <string name="str_orange">#fe7b27</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="tv_selectAllShoppingCart">全选</string>
    <string name="cancelSelectAll">取消</string>
    <string name="gotoHome">去逛逛</string>
    <string name="submitOrder">提交订单</string>
    <string name="GoodsCombinationSelect_title">选择组合</string>
    <string name="goodsCombinationSelect_buyNow">立即购买</string>
    <string name="goodsCombinationSelect_selectGoodsProperty">请选择商品属性</string>
    <string name="goodsCombinationPackage_query">确定</string>
    <string name="deliveryMethod">配送方式：</string>
    <string name="receiverPerson">收件人:</string>
    <string name="receiverPhone">联系方式:</string>
    <string name="receiverPostcode">邮编:</string>
    <string name="receiverPlace">收货地址:</string>
    <string name="whetherBilling">是否开具发票</string>
    <string name="order_allocable">快递</string>
    <string name="order_bySelf">上门自取</string>
    <string name="flyCoinDeduction">抵扣飞币数:</string>
    <string name="orderRemark">订单备注:</string>
    <string name="bill">发票</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirmOrderGeneralActivity_tv_totalPrices">实付款</string>
    <string name="confirmOrderGeneralActivity_title">提交订单</string>
    <string name="moneyFlag">￥</string>
    <string name="confirmSubmit">确认提交</string>
    <string name="payByOnline">在线支付</string>
    <string name="payByCredit">信用支付</string>
    <string name="btn_MyOrderToPayPagerBatchPayOrder">批量支付</string>
    <string name="cb_dispatchByExpress">普通快递</string>
    <string name="tv_confirmOrderDeliveryMethod_C">配送方式：</string>
    <string name="tv_confirmOrderIfOpenBilling">是否开发票：</string>
    <string name="tv_confirmOrderOrderRemark">订单备注：</string>
    <string name="tv_confirmOrderOrderRemarkHint">请在这里添加备注</string>
    <string name="et_pleaseInputInvoiceHint">请输入发票抬头</string>
    <string name="tv_privilegeFlyCoin">飞币抵扣：</string>
    <string name="CheckStandBankBindingActivity_tv_selectBankCard">选择银行</string>
    <string name="CheckStandBankBindingActivity_tv_selectProvince">选择省份</string>
    <string name="CheckStandBankBindingActivity_tv_bankCardNum">银行卡号</string>
    <string name="CheckStandBankBindingActivity_hint_bankCardNum">请输入银行卡号</string>
    <string name="CheckStandBankBindingActivity_tv_userName">持卡人</string>
    <string name="CheckStandBankBindingActivity_hint_userName">请输入持卡人签名</string>
    <string name="CheckStandBankBindingActivity_tv_userCardNum">身份证号</string>
    <string name="CheckStandBankBindingActivity_hint_userCardNum">输入持卡人身份证号</string>
    <string name="CheckStandBankBindingActivity_btn_queryBindingCard">确认绑定</string>
</resources>