<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_confirmOrderOrderRemark"
            android:textColor="@color/colorBlack_FF323232"
            android:textSize="@dimen/textFontSize_14" />

        <EditText
            android:id="@+id/et_orderRemark"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape_inwhite_outgray_circle_02"
            android:hint="@string/tv_confirmOrderOrderRemarkHint"
            android:paddingLeft="10dp"
            android:textColorHint="@color/colorBlack_FF999999"
            android:textColor="@color/colorBlack_FF323232"
            android:textSize="@dimen/textFontSize_12" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dividingLineColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_confirmOrderDeliveryMethod_C"
            android:textColor="@color/colorBlack_FF323232"
            android:textSize="@dimen/textFontSize_14" />

        <TextView
            android:id="@+id/tv_dispatchByExpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cb_dispatchByExpress"
            android:textColor="@color/colorBlack_FF323232"
            android:textSize="@dimen/textFontSize_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dividingLineColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_confirmOrderIfOpenBilling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_confirmOrderIfOpenBilling"
            android:textColor="@color/colorBlack_FF323232"
            android:textSize="@dimen/textFontSize_13" />

        <EditText
            android:id="@+id/et_InvoiceNumberCode"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/colorBlack_FF999999"
            android:textColor="@color/colorBlack_FF323232"
            android:background="@drawable/button_shape_inwhite_outgray_circle_02"
            android:textSize="@dimen/textFontSize_12"
            android:hint="@string/et_pleaseInputInvoiceHint"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dividingLineColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_privilegeFlyCoin"
            android:textColor="@color/colorBlack_FF323232"
            android:textSize="@dimen/textFontSize_14" />

        <TextView
            android:id="@+id/tv_privilegeFlyCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textColor="@color/colorRed_FFE83821"
            android:textSize="@dimen/textFontSize_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/dividingLineColor" />

</LinearLayout>